# entzun

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: models.py  router.py  transcription.py
backend/app/core/: config.py
backend/app/services/: report_generator.py  transcription.py
entzun/adapters/: openai_client.py  transcription.py
entzun/application/: ports.py
entzun/domain/: models.py
entzun/ui/: app.py
frontend/: .eslintrc.json  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  types.ts  vite-env.d.ts
frontend/src/components/: AudioRecorder.tsx  AudioUploader.tsx  VisualizationPanel.tsx
tests/unit/: test_app_logic.py  test_domain_models.py  test_openai_adapters.py  test_transcription_adapters.py
